Social icons. Fixed overlap in header and footer

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -22,7 +22,7 @@ footer {
     &.social-icons {
       font-size: 3rem;
       text-decoration: none;
-      width: 100%;
+      width: auto;
       padding: 0;
       margin: 0;
       text-align: center;
@@ -53,6 +53,7 @@ footer {
         position: absolute;
         bottom: 3vh;
         right: 0;
+        width: auto;
 
         li {
           width: auto;
