--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -261,6 +261,7 @@ nav {
         right: 0;
         z-index: 10;
         text-align: right;
+        width: auto;
         display: none;
 
         .fa {
@@ -520,6 +521,7 @@ nav {
         margin: 0 auto;
         list-style-type: none;
         text-align: center;
+        width: auto;
 
         li {
           display: inline-block;
